fix footer on mobile

--- a/website/assets/scss/_footer.scss
+++ b/website/assets/scss/_footer.scss
@@ -1,6 +1,7 @@
 // footer.
 footer {
 	min-height: unset;
+	overflow: unset;
 	background-color: $black;
 	color: #eee;
 	padding: 4rem 0 3rem;
